clusters/talos-robbinsdale/apps/homarr/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homarr
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
