clusters/talos-robbinsdale/apps/homarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homarr
  namespace: homarr
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: robbinsdale
      namespace: envoy-gateway-system
  hostnames:
    - "homarr.rajsingh.info"
    - "homarr.lukehouge.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: homarr
          port: 7575
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
